[gd_scene load_steps=16 format=3 uid="uid://ratvmt4c61q5"]

[ext_resource type="Script" path="res://elements/Enemies/Distance/distance.gd" id="1_ix70c"]
[ext_resource type="Texture2D" uid="uid://co4h2nhbd3yvv" path="res://new assets/0x72_DungeonTilesetII_v1.7/frames/big_demon_idle_anim_f0.png" id="2_1fknl"]
[ext_resource type="Texture2D" uid="uid://cu347f8nk7nf3" path="res://new assets/0x72_DungeonTilesetII_v1.7/frames/big_demon_idle_anim_f1.png" id="3_dvb7g"]
[ext_resource type="Texture2D" uid="uid://bgydfbvkq43b0" path="res://new assets/0x72_DungeonTilesetII_v1.7/frames/big_demon_idle_anim_f2.png" id="4_dss63"]
[ext_resource type="Texture2D" uid="uid://bsv1qn47ue4ka" path="res://new assets/0x72_DungeonTilesetII_v1.7/frames/big_demon_idle_anim_f3.png" id="5_d4n2w"]
[ext_resource type="Texture2D" uid="uid://pba1l0jt8kun" path="res://new assets/0x72_DungeonTilesetII_v1.7/frames/big_demon_run_anim_f0.png" id="6_r6djh"]
[ext_resource type="Texture2D" uid="uid://cpxd27t7uptyq" path="res://new assets/0x72_DungeonTilesetII_v1.7/frames/big_demon_run_anim_f1.png" id="7_5uxlc"]
[ext_resource type="Texture2D" uid="uid://bp8hyvajpevnn" path="res://new assets/0x72_DungeonTilesetII_v1.7/frames/big_demon_run_anim_f2.png" id="8_68jsd"]
[ext_resource type="Texture2D" uid="uid://1ynxe8mybp7g" path="res://new assets/0x72_DungeonTilesetII_v1.7/frames/big_demon_run_anim_f3.png" id="9_l7ko8"]
[ext_resource type="Texture2D" uid="uid://c22k3xir2x0hk" path="res://new assets/healthbarUnder.png" id="10_i7nx3"]
[ext_resource type="Texture2D" uid="uid://cvlhvmirprmpr" path="res://new assets/healthbarProgress.png" id="11_77lau"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3tdki"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_1fknl")
}, {
"duration": 1.0,
"texture": ExtResource("3_dvb7g")
}, {
"duration": 1.0,
"texture": ExtResource("4_dss63")
}, {
"duration": 1.0,
"texture": ExtResource("5_d4n2w")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_r6djh")
}, {
"duration": 1.0,
"texture": ExtResource("7_5uxlc")
}, {
"duration": 1.0,
"texture": ExtResource("8_68jsd")
}, {
"duration": 1.0,
"texture": ExtResource("9_l7ko8")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tylfu"]
radius = 9.0
height = 28.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2gy65"]
radius = 57.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pwj3n"]
radius = 29.6142

[node name="Distance" type="CharacterBody2D"]
script = ExtResource("1_ix70c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_3tdki")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_tylfu")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -14.0
offset_top = -25.0
offset_right = 15.0
offset_bottom = -21.0
nine_patch_stretch = true
texture_under = ExtResource("10_i7nx3")
texture_progress = ExtResource("11_77lau")

[node name="detection_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_2gy65")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_pwj3n")

[node name="attack_cooldown" type="Timer" parent="."]

[node name="before_attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[connection signal="take_damage" from="." to="." method="_on_take_damage"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="before_attack_cooldown" to="." method="_on_before_attack_cooldown_timeout"]
